// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentArticleLookup should render with SBA Offices when provided 1`] = `
<div>
  <div
    className="twoLineBanner"
    data-testid="lookup-field-section"
  >
    <h2
      className="header"
      tabIndex="0"
    >
      This is a title
    </h2>
    <div>
      <div
        className="searchBox"
      >
        <div
          className="text-input textInput"
          data-testid="document-lookup-text-input-container"
          id="document-lookup-text-input-container"
        >
          <label
            aria-label="Search"
            className={null}
            data-testid="document-lookup-text-input-label"
            htmlFor="document-lookup-text-input"
            tabIndex="0"
          >
            Search
          </label>
          <div
            className="container"
          >
            <input
              aria-labelledby="document-lookup-text-input"
              className="input"
              data-testid="document-lookup-text-input"
              id="document-lookup-text-input"
              inputMode="text"
              list=""
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyUp={[Function]}
              placeholder="Search by title or number"
              required={true}
              type="text"
            />
          </div>
        </div>
        <div
          className="searchIcon"
        >
          <i
            className="search fa fa-search"
          />
        </div>
      </div>
      <div
        className="multiSelect"
      >
        <div
          className="select"
          data-cy="title-select"
          data-testid="title-select"
        >
          <label
            aria-label="Title"
            className={null}
            htmlFor="title-select"
            tabIndex="0"
          >
            Title
          </label>
          <div
            className="Select is-clearable Select--single"
          >
            <div
              className="Select-control"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <span
                className="Select-multi-value-wrapper"
                id="react-select-6--value"
              >
                <div
                  className="Select-placeholder"
                >
                  Select...
                </div>
                <div
                  aria-activedescendant="react-select-6--value"
                  aria-disabled="false"
                  aria-expanded={false}
                  aria-owns=""
                  className="Select-input"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  role="combobox"
                  style={
                    Object {
                      "border": 0,
                      "display": "inline-block",
                      "width": 1,
                    }
                  }
                  tabIndex={0}
                />
              </span>
              <span
                className="Select-arrow-zone"
                onMouseDown={[Function]}
              >
                <i
                  alt="drop-down arrow"
                  className="fa fa-chevron-down"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="multiSelect"
      >
        <div
          className="select"
          data-cy="lightsabercolor-select"
          data-testid="lightsabercolor-select"
        >
          <label
            aria-label="Lightsaber Color"
            className={null}
            htmlFor="lightsabercolor-select"
            tabIndex="0"
          >
            Lightsaber Color
          </label>
          <div
            className="Select is-clearable Select--single"
          >
            <div
              className="Select-control"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <span
                className="Select-multi-value-wrapper"
                id="react-select-7--value"
              >
                <div
                  className="Select-placeholder"
                >
                  Select...
                </div>
                <div
                  aria-activedescendant="react-select-7--value"
                  aria-disabled="false"
                  aria-expanded={false}
                  aria-owns=""
                  className="Select-input"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  role="combobox"
                  style={
                    Object {
                      "border": 0,
                      "display": "inline-block",
                      "width": 1,
                    }
                  }
                  tabIndex={0}
                />
              </span>
              <span
                className="Select-arrow-zone"
                onMouseDown={[Function]}
              >
                <i
                  alt="drop-down arrow"
                  className="fa fa-chevron-down"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="multiSelect"
      >
        <div
          className="select"
          data-cy="movie-select"
          data-testid="movie-select"
        >
          <label
            aria-label="Movie"
            className={null}
            htmlFor="movie-select"
            tabIndex="0"
          >
            Movie
          </label>
          <div
            className="Select is-clearable Select--single"
          >
            <div
              className="Select-control"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <span
                className="Select-multi-value-wrapper"
                id="react-select-8--value"
              >
                <div
                  className="Select-placeholder"
                >
                  Select...
                </div>
                <div
                  aria-activedescendant="react-select-8--value"
                  aria-disabled="false"
                  aria-expanded={false}
                  aria-owns=""
                  className="Select-input"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  role="combobox"
                  style={
                    Object {
                      "border": 0,
                      "display": "inline-block",
                      "width": 1,
                    }
                  }
                  tabIndex={0}
                />
              </span>
              <span
                className="Select-arrow-zone"
                onMouseDown={[Function]}
              >
                <i
                  alt="drop-down arrow"
                  className="fa fa-chevron-down"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="multiSelect"
      >
        <div
          className="select"
          data-cy="status-select"
          data-testid="status-select"
        >
          <label
            aria-label="Status"
            className={null}
            htmlFor="status-select"
            tabIndex="0"
          >
            Status
          </label>
          <div
            className="Select is-clearable Select--single"
          >
            <div
              className="Select-control"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <span
                className="Select-multi-value-wrapper"
                id="react-select-9--value"
              >
                <div
                  className="Select-placeholder"
                >
                  Select...
                </div>
                <div
                  aria-activedescendant="react-select-9--value"
                  aria-disabled="false"
                  aria-expanded={false}
                  aria-owns=""
                  className="Select-input"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  role="combobox"
                  style={
                    Object {
                      "border": 0,
                      "display": "inline-block",
                      "width": 1,
                    }
                  }
                  tabIndex={0}
                />
              </span>
              <span
                className="Select-arrow-zone"
                onMouseDown={[Function]}
              >
                <i
                  alt="drop-down arrow"
                  className="fa fa-chevron-down"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="multiSelect"
      >
        <div
          className="select"
          data-cy="office"
          data-testid="office"
        >
          <label
            aria-label="Office"
            className={null}
            htmlFor="office"
            tabIndex="0"
          >
            Office
          </label>
          <div
            className="Select is-clearable Select--single"
          >
            <div
              className="Select-control"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <span
                className="Select-multi-value-wrapper"
                id="react-select-10--value"
              >
                <div
                  className="Select-placeholder"
                >
                  Select...
                </div>
                <div
                  aria-activedescendant="react-select-10--value"
                  aria-disabled="false"
                  aria-expanded={false}
                  aria-owns=""
                  className="Select-input"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  role="combobox"
                  style={
                    Object {
                      "border": 0,
                      "display": "inline-block",
                      "width": 1,
                    }
                  }
                  tabIndex={0}
                />
              </span>
              <span
                className="Select-arrow-zone"
                onMouseDown={[Function]}
              >
                <i
                  alt="drop-down arrow"
                  className="fa fa-chevron-down"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="leftApplyButton"
      >
        <button
          className="button alternate large primary responsive spacing"
          data-testid="button"
          onClick={
            [MockFunction] {
              "calls": Array [
                Array [],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            }
          }
        >
          Apply
        </button>
      </div>
    </div>
  </div>
  <div
    className="result"
  >
    <div
      className="paginator"
    >
      <div
        aria-label="Showing results 5 to 8 out of 42"
        className="paginator"
        role="group"
      >
        <button
          aria-label="Go to previous results"
          className="button large secondary"
          data-testid="previous button"
          onClick={[Function]}
        >
          <i
            alt="previous page"
            aria-hidden="true"
            className="fa fa-fw fa-chevron-left"
          />
        </button>
        <span
          data-testid="showing results text"
        >
          Showing 
          <strong
            className="text-primary"
          >
            5
          </strong>
           
          <span
            className="spacing"
          >
            -
          </span>
           
          <strong
            className="text-primary"
          >
            8
          </strong>
           
          <span
            className="spacing"
          >
            of
          </span>
           
          <strong
            className="text-primary"
          >
            42
          </strong>
        </span>
        <button
          aria-label="Go to next results"
          className="button large secondary"
          data-testid="next button"
          onClick={[Function]}
        >
          <i
            alt="next page"
            aria-hidden="true"
            className="fa fa-fw fa-chevron-right"
          />
        </button>
      </div>
    </div>
    <div
      className="documentCardCollection"
    >
      <div
        className="detail-card-collection detailCardCollection"
        data-cy="detail-card-collection"
      >
        <div
          className="card-container card"
          data-cy="detail-card-collection-container"
        >
          <div
            className="detail-card detailCard"
            data-testid="detail-card"
          >
            <div
              className="label small"
            >
              <h6
                className="type"
              >
                Memo
              </h6>
            </div>
            <h6>
              <a
                href="javascript:void(0);"
              >
                Master
              </a>
            </h6>
            <div
              className="dashContainer"
            >
              <hr
                className="dash dash"
                style={
                  Object {
                    "width": "30px",
                  }
                }
              />
            </div>
            <div>
              <table
                className="programSummaryTableData"
              >
                <tbody
                  className="program-summary-table"
                />
              </table>
            </div>
          </div>
        </div>
        <div
          className="card-container card"
          data-cy="detail-card-collection-container"
        >
          <div
            className="detail-card detailCard"
            data-testid="detail-card"
          >
            <div
              className="label small"
            >
              <h6
                className="type"
              >
                Memo
              </h6>
            </div>
            <h6>
              <a
                href="javascript:void(0);"
              >
                Knight
              </a>
            </h6>
            <div
              className="dashContainer"
            >
              <hr
                className="dash dash"
                style={
                  Object {
                    "width": "30px",
                  }
                }
              />
            </div>
            <div>
              <table
                className="programSummaryTableData"
              >
                <tbody
                  className="program-summary-table"
                />
              </table>
            </div>
          </div>
        </div>
        <div
          className="card-container card"
          data-cy="detail-card-collection-container"
        >
          <div
            className="detail-card detailCard"
            data-testid="detail-card"
          >
            <div
              className="label small"
            >
              <h6
                className="type"
              >
                Memo
              </h6>
            </div>
            <h6>
              <a
                href="javascript:void(0);"
              >
                Master
              </a>
            </h6>
            <div
              className="dashContainer"
            >
              <hr
                className="dash dash"
                style={
                  Object {
                    "width": "30px",
                  }
                }
              />
            </div>
            <div>
              <table
                className="programSummaryTableData"
              >
                <tbody
                  className="program-summary-table"
                />
              </table>
            </div>
          </div>
        </div>
        <div
          className="card-container card"
          data-cy="detail-card-collection-container"
        >
          <div
            className="detail-card detailCard"
            data-testid="detail-card"
          >
            <div
              className="label small"
            >
              <h6
                className="type"
              >
                Memo
              </h6>
            </div>
            <h6>
              <a
                href="javascript:void(0);"
              >
                Knight
              </a>
            </h6>
            <div
              className="dashContainer"
            >
              <hr
                className="dash dash"
                style={
                  Object {
                    "width": "30px",
                  }
                }
              />
            </div>
            <div>
              <table
                className="programSummaryTableData"
              >
                <tbody
                  className="program-summary-table"
                />
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="paginator"
    >
      <div
        aria-label="Showing results 5 to 8 out of 42"
        className="paginator"
        role="group"
      >
        <button
          aria-label="Go to previous results"
          className="button large secondary"
          data-testid="previous button"
          onClick={[Function]}
        >
          <i
            alt="previous page"
            aria-hidden="true"
            className="fa fa-fw fa-chevron-left"
          />
        </button>
        <span
          data-testid="showing results text"
        >
          Showing 
          <strong
            className="text-primary"
          >
            5
          </strong>
           
          <span
            className="spacing"
          >
            -
          </span>
           
          <strong
            className="text-primary"
          >
            8
          </strong>
           
          <span
            className="spacing"
          >
            of
          </span>
           
          <strong
            className="text-primary"
          >
            42
          </strong>
        </span>
        <button
          aria-label="Go to next results"
          className="button large secondary"
          data-testid="next button"
          onClick={[Function]}
        >
          <i
            alt="next page"
            aria-hidden="true"
            className="fa fa-fw fa-chevron-right"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DocumentArticleLookup should render with all the information 1`] = `
<div>
  <div
    className="oneLineBanner"
    data-testid="lookup-field-section"
  >
    <h2
      className="header"
      tabIndex="0"
    >
      This is a title
    </h2>
    <div>
      <div
        className="searchBox"
      >
        <div
          className="text-input textInput"
          data-testid="document-lookup-text-input-container"
          id="document-lookup-text-input-container"
        >
          <label
            aria-label="Search"
            className={null}
            data-testid="document-lookup-text-input-label"
            htmlFor="document-lookup-text-input"
            tabIndex="0"
          >
            Search
          </label>
          <div
            className="container"
          >
            <input
              aria-labelledby="document-lookup-text-input"
              className="input"
              data-testid="document-lookup-text-input"
              id="document-lookup-text-input"
              inputMode="text"
              list=""
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyUp={[Function]}
              placeholder="Search by title or number"
              required={true}
              type="text"
            />
          </div>
        </div>
        <div
          className="searchIcon"
        >
          <i
            className="search fa fa-search"
          />
        </div>
      </div>
      <div
        className="multiSelect"
      >
        <div
          className="select"
          data-cy="title-select"
          data-testid="title-select"
        >
          <label
            aria-label="Title"
            className={null}
            htmlFor="title-select"
            tabIndex="0"
          >
            Title
          </label>
          <div
            className="Select is-clearable Select--single"
          >
            <div
              className="Select-control"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <span
                className="Select-multi-value-wrapper"
                id="react-select-2--value"
              >
                <div
                  className="Select-placeholder"
                >
                  Select...
                </div>
                <div
                  aria-activedescendant="react-select-2--value"
                  aria-disabled="false"
                  aria-expanded={false}
                  aria-owns=""
                  className="Select-input"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  role="combobox"
                  style={
                    Object {
                      "border": 0,
                      "display": "inline-block",
                      "width": 1,
                    }
                  }
                  tabIndex={0}
                />
              </span>
              <span
                className="Select-arrow-zone"
                onMouseDown={[Function]}
              >
                <i
                  alt="drop-down arrow"
                  className="fa fa-chevron-down"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="multiSelect"
      >
        <div
          className="select"
          data-cy="lightsabercolor-select"
          data-testid="lightsabercolor-select"
        >
          <label
            aria-label="Lightsaber Color"
            className={null}
            htmlFor="lightsabercolor-select"
            tabIndex="0"
          >
            Lightsaber Color
          </label>
          <div
            className="Select is-clearable Select--single"
          >
            <div
              className="Select-control"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <span
                className="Select-multi-value-wrapper"
                id="react-select-3--value"
              >
                <div
                  className="Select-placeholder"
                >
                  Select...
                </div>
                <div
                  aria-activedescendant="react-select-3--value"
                  aria-disabled="false"
                  aria-expanded={false}
                  aria-owns=""
                  className="Select-input"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  role="combobox"
                  style={
                    Object {
                      "border": 0,
                      "display": "inline-block",
                      "width": 1,
                    }
                  }
                  tabIndex={0}
                />
              </span>
              <span
                className="Select-arrow-zone"
                onMouseDown={[Function]}
              >
                <i
                  alt="drop-down arrow"
                  className="fa fa-chevron-down"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="multiSelect"
      >
        <div
          className="select"
          data-cy="movie-select"
          data-testid="movie-select"
        >
          <label
            aria-label="Movie"
            className={null}
            htmlFor="movie-select"
            tabIndex="0"
          >
            Movie
          </label>
          <div
            className="Select is-clearable Select--single"
          >
            <div
              className="Select-control"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <span
                className="Select-multi-value-wrapper"
                id="react-select-4--value"
              >
                <div
                  className="Select-placeholder"
                >
                  Select...
                </div>
                <div
                  aria-activedescendant="react-select-4--value"
                  aria-disabled="false"
                  aria-expanded={false}
                  aria-owns=""
                  className="Select-input"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  role="combobox"
                  style={
                    Object {
                      "border": 0,
                      "display": "inline-block",
                      "width": 1,
                    }
                  }
                  tabIndex={0}
                />
              </span>
              <span
                className="Select-arrow-zone"
                onMouseDown={[Function]}
              >
                <i
                  alt="drop-down arrow"
                  className="fa fa-chevron-down"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="multiSelect"
      >
        <div
          className="select"
          data-cy="status-select"
          data-testid="status-select"
        >
          <label
            aria-label="Status"
            className={null}
            htmlFor="status-select"
            tabIndex="0"
          >
            Status
          </label>
          <div
            className="Select is-clearable Select--single"
          >
            <div
              className="Select-control"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <span
                className="Select-multi-value-wrapper"
                id="react-select-5--value"
              >
                <div
                  className="Select-placeholder"
                >
                  Select...
                </div>
                <div
                  aria-activedescendant="react-select-5--value"
                  aria-disabled="false"
                  aria-expanded={false}
                  aria-owns=""
                  className="Select-input"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  role="combobox"
                  style={
                    Object {
                      "border": 0,
                      "display": "inline-block",
                      "width": 1,
                    }
                  }
                  tabIndex={0}
                />
              </span>
              <span
                className="Select-arrow-zone"
                onMouseDown={[Function]}
              >
                <i
                  alt="drop-down arrow"
                  className="fa fa-chevron-down"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="rightApplyButton"
      >
        <button
          className="button alternate large primary responsive spacing"
          data-testid="button"
          onClick={[MockFunction]}
        >
          Apply
        </button>
      </div>
    </div>
  </div>
  <div
    className="result"
  >
    <div
      className="paginator"
    >
      <div
        aria-label="Showing results 5 to 8 out of 42"
        className="paginator"
        role="group"
      >
        <button
          aria-label="Go to previous results"
          className="button large secondary"
          data-testid="previous button"
          onClick={[Function]}
        >
          <i
            alt="previous page"
            aria-hidden="true"
            className="fa fa-fw fa-chevron-left"
          />
        </button>
        <span
          data-testid="showing results text"
        >
          Showing 
          <strong
            className="text-primary"
          >
            5
          </strong>
           
          <span
            className="spacing"
          >
            -
          </span>
           
          <strong
            className="text-primary"
          >
            8
          </strong>
           
          <span
            className="spacing"
          >
            of
          </span>
           
          <strong
            className="text-primary"
          >
            42
          </strong>
        </span>
        <button
          aria-label="Go to next results"
          className="button large secondary"
          data-testid="next button"
          onClick={[Function]}
        >
          <i
            alt="next page"
            aria-hidden="true"
            className="fa fa-fw fa-chevron-right"
          />
        </button>
      </div>
    </div>
    <div
      className="documentCardCollection"
    >
      <div
        className="detail-card-collection detailCardCollection"
        data-cy="detail-card-collection"
      >
        <div
          className="card-container card"
          data-cy="detail-card-collection-container"
        >
          <div
            className="detail-card detailCard"
            data-testid="detail-card"
          >
            <div
              className="label small"
            >
              <h6
                className="type"
              >
                Memo
              </h6>
            </div>
            <h6>
              <a
                href="javascript:void(0);"
              >
                Master
              </a>
            </h6>
            <div
              className="dashContainer"
            >
              <hr
                className="dash dash"
                style={
                  Object {
                    "width": "30px",
                  }
                }
              />
            </div>
            <div>
              <table
                className="programSummaryTableData"
              >
                <tbody
                  className="program-summary-table"
                />
              </table>
            </div>
          </div>
        </div>
        <div
          className="card-container card"
          data-cy="detail-card-collection-container"
        >
          <div
            className="detail-card detailCard"
            data-testid="detail-card"
          >
            <div
              className="label small"
            >
              <h6
                className="type"
              >
                Memo
              </h6>
            </div>
            <h6>
              <a
                href="javascript:void(0);"
              >
                Knight
              </a>
            </h6>
            <div
              className="dashContainer"
            >
              <hr
                className="dash dash"
                style={
                  Object {
                    "width": "30px",
                  }
                }
              />
            </div>
            <div>
              <table
                className="programSummaryTableData"
              >
                <tbody
                  className="program-summary-table"
                />
              </table>
            </div>
          </div>
        </div>
        <div
          className="card-container card"
          data-cy="detail-card-collection-container"
        >
          <div
            className="detail-card detailCard"
            data-testid="detail-card"
          >
            <div
              className="label small"
            >
              <h6
                className="type"
              >
                Memo
              </h6>
            </div>
            <h6>
              <a
                href="javascript:void(0);"
              >
                Master
              </a>
            </h6>
            <div
              className="dashContainer"
            >
              <hr
                className="dash dash"
                style={
                  Object {
                    "width": "30px",
                  }
                }
              />
            </div>
            <div>
              <table
                className="programSummaryTableData"
              >
                <tbody
                  className="program-summary-table"
                />
              </table>
            </div>
          </div>
        </div>
        <div
          className="card-container card"
          data-cy="detail-card-collection-container"
        >
          <div
            className="detail-card detailCard"
            data-testid="detail-card"
          >
            <div
              className="label small"
            >
              <h6
                className="type"
              >
                Memo
              </h6>
            </div>
            <h6>
              <a
                href="javascript:void(0);"
              >
                Knight
              </a>
            </h6>
            <div
              className="dashContainer"
            >
              <hr
                className="dash dash"
                style={
                  Object {
                    "width": "30px",
                  }
                }
              />
            </div>
            <div>
              <table
                className="programSummaryTableData"
              >
                <tbody
                  className="program-summary-table"
                />
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="paginator"
    >
      <div
        aria-label="Showing results 5 to 8 out of 42"
        className="paginator"
        role="group"
      >
        <button
          aria-label="Go to previous results"
          className="button large secondary"
          data-testid="previous button"
          onClick={[Function]}
        >
          <i
            alt="previous page"
            aria-hidden="true"
            className="fa fa-fw fa-chevron-left"
          />
        </button>
        <span
          data-testid="showing results text"
        >
          Showing 
          <strong
            className="text-primary"
          >
            5
          </strong>
           
          <span
            className="spacing"
          >
            -
          </span>
           
          <strong
            className="text-primary"
          >
            8
          </strong>
           
          <span
            className="spacing"
          >
            of
          </span>
           
          <strong
            className="text-primary"
          >
            42
          </strong>
        </span>
        <button
          aria-label="Go to next results"
          className="button large secondary"
          data-testid="next button"
          onClick={[Function]}
        >
          <i
            alt="next page"
            aria-hidden="true"
            className="fa fa-fw fa-chevron-right"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
